syntax = "proto3";

option go_package = "./;main";

// для генерации сервиса:
// protoc --go_out=plugins=grpc:. *.proto

// у вас должен быть установлен protoc 
// полученный код при загрузки в автогрейдер надо будет положить в service.go
// на время тестов можно ничего не делать

package main;

message Cat {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string Color = 4;
}

message Id {
    int64 id = 1;
}

message Cats {
    repeated Cat cats = 1;
}

message Info {
    string info = 1;
}

message Nothing {
    bool dummy = 1;
}

service CatsExplorer {
    rpc GetCat(Id) returns(Cat) {}
    rpc GetAllCats(Nothing) returns(Cats) {}
    rpc UpdateCat(Cat) returns(Info) {}
    rpc CreateNewCat(Cat) returns(Info) {}
    rpc DeleteCat(Id) returns(Info) {}
}